--- a/index-one-page-team.html
+++ b/index-one-page-team.html
@@ -8,7 +8,7 @@
     ================================================== -->
 
     <meta charset="utf-8">
-    <title>Cabana - Responsive HTML5/CSS3 Template</title>
+    <title>phdesign</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -51,7 +51,7 @@
 
             <!--<h1><a href="index.html" title="Cabana">Cabana</a></h1>-->
 
-            <h1><a href="index.html"><img src="/assets/img/cabana_logo.png" alt="Header Logo" /></a></h1>
+            <h1><a href="/">PH<span class="logo-accent">DESIGN</span></a></h1>
 
           </div><!-- end .logo -->
 
@@ -1046,6 +1046,19 @@
 
     <script src="http://maps.google.com/maps/api/js?sensor=true"></script>
     <script src="/assets/js/main.js"></script>
+
+    <script type="text/javascript">
+      /* * * CONFIGURATION VARIABLES * * */
+      var disqus_shortname = 'phdesign';
+
+      /* * * DON'T EDIT BELOW THIS LINE * * */
+      (function () {
+        var s = document.createElement('script'); s.async = true;
+        s.type = 'text/javascript';
+        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+      }());
+    </script>
 
   </body>
 
