--- a/contact-me/index.html
+++ b/contact-me/index.html
@@ -34,6 +34,7 @@
 
   <body>
 
+    <div class="header-background-image"></div>
     <header role="banner">
       <div class="header-top">
         
@@ -75,13 +76,18 @@
         </nav>
 
       </div><!-- end .header-top -->
+
+      
+
     </header>
 
     <main class="container-fluid">
       <div class="row">
-                  <h2>Contact Me</h2>
+            <div class="content">
+      <div class="container">
+        <h1>Contact Me</h1>
 
-          <div class="row">
+                  <div class="row">
             <div class="col-sm-6">
               <form action="https://getsimpleform.com/messages?form_api_token=099d0e93522d09e540cee9a09d50647b" method="post">
                 <input type='hidden' name='redirect_to' value='http://phdesign.com.au/thank-you' />
@@ -101,6 +107,10 @@
               </form>
             </div>
           </div>
+
+
+      </div><!-- end .container -->
+    </div><!-- end .content -->
 
       </div><!-- end .row -->
     </main><!-- end .container-fluid -->
