--- a/phreplace/index.html
+++ b/phreplace/index.html
@@ -34,6 +34,7 @@
 
   <body>
 
+    <div class="header-background-image"></div>
     <header role="banner">
       <div class="header-top">
         
@@ -75,10 +76,17 @@
         </nav>
 
       </div><!-- end .header-top -->
+
+      
+
     </header>
 
     <main class="container-fluid">
       <div class="row">
+            <div class="content">
+      <div class="container">
+        <h1>phreplace</h1>
+
         <p>phreplace is a multi-line search and replace add on for PSPad. It allows multiple lines for search and replace terms, as well as supporting other standard search features such as:</p>
 <ul class="tick">
 <li>Search, replace or replace all functions</li>
@@ -100,6 +108,10 @@
 <h3>Documentation</h3>
 <p>Documentation is included as a help file in the phreplace download, or is [permalink href="introduction"]available online.[/permalink]</p>
 <p>See the [permalink href="installation"]Installation page[/permalink] for information about installing phreplace.</p>
+
+
+      </div><!-- end .container -->
+    </div><!-- end .content -->
 
       </div><!-- end .row -->
     </main><!-- end .container-fluid -->
