--- a/thank-you/index.html
+++ b/thank-you/index.html
@@ -34,6 +34,7 @@
 
   <body>
 
+    <div class="header-background-image"></div>
     <header role="banner">
       <div class="header-top">
         
@@ -75,6 +76,9 @@
         </nav>
 
       </div><!-- end .header-top -->
+
+      
+
     </header>
 
     <main class="container-fluid">
