--- a/npptoolbucket/index.html
+++ b/npptoolbucket/index.html
@@ -34,6 +34,7 @@
 
   <body>
 
+    <div class="header-background-image"></div>
     <header role="banner">
       <div class="header-top">
         
@@ -75,10 +76,17 @@
         </nav>
 
       </div><!-- end .header-top -->
+
+      
+
     </header>
 
     <main class="container-fluid">
       <div class="row">
+            <div class="content">
+      <div class="container">
+        <h1>NppToolBucket</h1>
+
         <div class="postTitle">
 <h1>NppToolBucket</h1>
 </div>
@@ -136,6 +144,10 @@
 <ul>
 <li>Initial release</li>
 </ul>
+
+
+      </div><!-- end .container -->
+    </div><!-- end .content -->
 
       </div><!-- end .row -->
     </main><!-- end .container-fluid -->
