--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
       <img class="profile-pic" src="/assets/img/paul_heasley.jpg" width="180px" height="180px" alt="A profile picture of author Paul Heasley">
       <p class="meta-label">about the author <span class="meta-value">Paul Heasley</span></p>
-      <p>I’m an expert .NET Developer and Technical Lead with a talent for UI design. I have excellent communication skills, proven leadership ability and I’m passionate about producing products that are a joy to use.</p>
+      <p>I’m a .NET Technical Lead with a interest in UX / interface design. I have excellent communication skills, proven leadership ability and I’m passionate about producing products that are a joy to use.</p>
       <p>I’m also a Microsoft Certified Professional Developer and Certified ScrumMaster.</p>
 
       <a class="btn btn-default btn-read-more" href="/contact-me" title="Contact me">Contact Me</a>
@@ -254,7 +254,7 @@
 
       <p>Backbone.Spark provides computed property support for Backbone.js, the goal of the extension is to make computed properties behave in the same way as a normal attribute so your other code doesn’t need to know the difference.</p>
 
-<p><a href="https://github.com/phdesign/Backbone.Spark&quot; title=&quot;Backbone.Spark project on GitHub">The latest version of Backbone.Spark and examples can be found at GitHub</a></p>
+<p><a href="https://github.com/phdesign/Backbone.Spark" title="Backbone.Spark project on GitHub">The latest version of Backbone.Spark and examples can be found at GitHub</a></p>
 
 
 
@@ -358,10 +358,6 @@ The problem. I have an Entity Framework model being used in the business layer c
       <br />
 
       <p>Need to perform validation on a model’s property based on some other state of the model? Here’s a way to achieve it using the IValidatableObject interface and data annotations.</p>
-
-<p>In our example project we want to validate the state field is a valid Australian state if the country field is “Australia”.</p>
-
-<p><img src="/assets/img/blog/ConditionalValidationSmall.png" alt="Conditional validation of state field" /></p>
 
 
 
