--- a/phreplace/index.html
+++ b/phreplace/index.html
@@ -152,7 +152,7 @@
     <h5>Documentation</h5>
 
     <nav>
-      <ul>
+      <ul class="alt">
         <li><a href="/phreplace/docs/#introduction">Introduction</a></li>
         <li><a href="/phreplace/docs/#installation">Installation</a></li>
         <li>
