--- a/programming/wpf-radiobutton-binding-to-ischecked-property/index.html
+++ b/programming/wpf-radiobutton-binding-to-ischecked-property/index.html
@@ -30,8 +30,8 @@
   <![endif]-->
 
   <!-- Favicon/Touch Icons  -->
-  <!-- <link rel="shortcut icon" href="/assets/img/favicon.ico">
-  <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png">
+  <link rel="shortcut icon" href="/favicon.ico">
+  <!-- <link rel="apple-touch-icon" href="/assets/img/apple-touch-icon.png">
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/apple-touch-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/apple-touch-icon-114x114.png"> -->
 
@@ -275,6 +275,17 @@
     s.src = '//' + disqus_shortname + '.disqus.com/count.js';
     (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
   }());
+</script>
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-2414000-1', 'auto');
+  ga('send', 'pageview');
+
 </script>
 
   </body>
