--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       <p>I’m a .NET Technical Lead with a interest in UX / interface design. I have excellent communication skills, proven leadership ability and I’m passionate about producing products that are a joy to use.</p>
       <p>I’m also a Microsoft Certified Professional Developer and Certified ScrumMaster.</p>
 
-      <a class="btn btn-default btn-read-more" href="/contact-me" title="Contact me">Contact Me</a>
+      <a class="btn btn-default btn-read-more" href="/contact" title="Contact me">Contact Me</a>
 
     </div><!-- end .container -->
   </article><!-- end .about-me -->
