--- a/betternote/index.html
+++ b/betternote/index.html
@@ -100,23 +100,23 @@
   Tags are used to categorise notes, add as many tags as you want to a note, tag suggestions are shown as you type.
 </p>
 <p>
-  <img src="/assets/img/pages/betternote-screenshot1.png" alt="" title="Betternote screenshot add tags" width="390" height="163" class="alignnone size-full wp-image-334" />
+  <img src="/assets/img/pages/betternote-screenshot1.png" alt="" title="Betternote screenshot add tags" class="alignnone size-full wp-image-334" />
 </p>
 <p>
-  <img src="/assets/img/pages/betternote-screenshot2.png" alt="" title="Betternote screenshot list tags" width="390" height="213" class="alignnone size-full wp-image-335" />
+  <img src="/assets/img/pages/betternote-screenshot2.png" alt="" title="Betternote screenshot list tags" class="alignnone size-full wp-image-335" />
 </p>
 <p>
-  <img src="/assets/img/pages/betternote-screenshot3.png" alt="" title="Betternote screenshot show items tagged as" width="390" height="170" class="alignnone size-full wp-image-336" />
+  <img src="/assets/img/pages/betternote-screenshot3.png" alt="" title="Betternote screenshot show items tagged as" class="alignnone size-full wp-image-336" />
 </p>
 <h2>Search</h2>
 <p>Search anywhere within note titles.</p>
 <p>
-  <img src="/assets/img/pages/betternote-screenshot4.png" alt="" title="Betternote screenshot search" width="390" height="217" class="alignnone size-full wp-image-337" />
+  <img src="/assets/img/pages/betternote-screenshot4.png" alt="" title="Betternote screenshot search" class="alignnone size-full wp-image-337" />
 </p>
 <h2>Sort</h2>
 <p>Sort alphabetically, by date created or date modified.</p>
 <p>
-  <img src="/assets/img/pages/betternote-screenshot5.png" alt="" title="Betternote screenshot sort" width="390" height="342" class="alignnone size-full wp-image-338" />
+  <img src="/assets/img/pages/betternote-screenshot5.png" alt="" title="Betternote screenshot sort" class="alignnone size-full wp-image-338" />
 </p>
 
 
