--- a/general/excel-templates-for-scrum-product-and-sprint-backlogs/index.html
+++ b/general/excel-templates-for-scrum-product-and-sprint-backlogs/index.html
@@ -130,7 +130,7 @@
 </blockquote>
 
 <blockquote>
-  <p>“Many time management techniques fail because they subject the people who use them to a higher level of added complexity with respect to the &gt; intrinsic complexity of the task at hand.”<br />
+  <p>“Many time management techniques fail because they subject the people who use them to a higher level of added complexity with respect to the intrinsic complexity of the task at hand.”<br />
 - <a href="http://pomodorotechnique.com/">The Pomodoro Technique</a></p>
 </blockquote>
 
