--- a/npptoolbucket/index.html
+++ b/npptoolbucket/index.html
@@ -35,6 +35,9 @@
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/apple-touch-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/apple-touch-icon-114x114.png"> -->
 
+  <!-- Tell Google this page is under test - index original version -->
+  <link rel="canonical" href="http://www.phdesign.com.au/npptoolbucket/">
+
 </head>
 
   <body>
@@ -125,7 +128,9 @@
   Requires .NET Framework 2.0 or higher to be installed on the system.
 </p>
 <h2>Screenshots</h2>
-<p>[gallery id="273"]</p>
+<p><img src="/assets/img/pages/ToolBucket1.png" alt=""></p>
+<p><img src="/assets/img/pages/ToolBucket2.png" alt=""></p>
+<p><img src="/assets/img/pages/ToolBucket3.png" alt=""></p>
 <h2>Version history</h2>
 <h3>v1.6</h3>
 <p>
