--- a/home/page2/index.html
+++ b/home/page2/index.html
@@ -37,6 +37,9 @@
   <link rel="apple-touch-icon" sizes="72x72" href="/assets/img/apple-touch-icon-72x72.png">
   <link rel="apple-touch-icon" sizes="114x114" href="/assets/img/apple-touch-icon-114x114.png"> -->
 
+  <!-- Tell Google this page is under test - index original version -->
+  <link rel="canonical" href="http://www.phdesign.com.au/home/page2/index.html">
+
 </head>
 
   <body class="home-more">
