--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       </div><!-- end .meta-label -->
       <br />
 
-      <p>I’ve recently become addicted to <a href="https://www.pinterest.com/paulheasley/pallet-projects/">pallet wood projects on Pinterest</a>, there’s something beautiful in breathing life back into old wood, and best of all it’s free. After finding a free source of pallets I’ve tried my hand a couple of projects, some shelves for the bathroom and a <a href="https://www.pinterest.com/pin/292100725810132139/">pallet wood stool</a>, I was pretty happy with the results so I thought I’d try my hand at something more substantial, a coffee table.</p>
+      <p>I’ve recently become addicted to <a href="https://www.pinterest.com/paulheasley/pallet-projects/" target="_blank">pallet wood projects on Pinterest</a>, there’s something beautiful in breathing life back into old wood, and best of all it’s free. After finding a free source of pallets I’ve tried my hand a couple of projects, some shelves for the bathroom and a <a href="https://www.pinterest.com/pin/292100725810132139/" target="_blank">pallet wood stool</a>, I was pretty happy with the results so I thought I’d try my hand at something more substantial, a coffee table.</p>
 
 
 
