--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="author" content="Paul Heasley">
+  
+    <meta name="google-site-verification" content="9tEgdbVtDnWGWmrq5fFYoF3x0VK8kfeRcbH5DJfqlYY" />
+  
 
   <title>phdesign</title>
 
