--- a/programming/index.html
+++ b/programming/index.html
@@ -101,11 +101,26 @@
       <div class="container">
 
   <div class="meta-label-lg">
-    Showing 16 posts  filed in 
+    Showing 17 posts  filed in 
     <span class="meta-value">programming</span>
   </div><!-- end .meta-label-lg -->
 
 </div>
+
+  <article>
+    <div class="container">
+
+      <h3><a href="/programming/github-pages-jekyll-and-grunt/" title="Read full article">Replace your CMS with GitHub Pages, Jekyll and Grunt</a></h3>
+      <div class="meta-label">
+        posted on <span class="meta-value muted">23 September 2015</span>
+        
+          in <span class="meta-value"><a href="/programming">programming</a></span>
+        
+        with <span class="meta-value"><a data-disqus-identifier="replace-your-cms-with-github-pages-jekyll-and-grunt" href="#disqus_thread">0 Comments</a></span>
+      </div><!-- end .meta-label -->
+
+    </div>
+  </article>
 
   <article>
     <div class="container">
