--- a/woodworking/pallet-wood-coffee-table/index.html
+++ b/woodworking/pallet-wood-coffee-table/index.html
@@ -319,6 +319,9 @@
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/github-pages-jekyll-and-grunt/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/github-pages-jekyll-and-grunt/">Replace your CMS with GitHub Pages, Jekyll and Grunt</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
