--- a/programming/index.html
+++ b/programming/index.html
@@ -101,11 +101,26 @@
       <div class="container">
 
   <div class="meta-label-lg">
-    Showing 17 posts  filed in 
+    Showing 18 posts  filed in 
     <span class="meta-value">programming</span>
   </div><!-- end .meta-label-lg -->
 
 </div>
+
+  <article>
+    <div class="container">
+
+      <h3><a href="/programming/using-grunt-with-pebble-build/" title="Read full article">Using Grunt with Pebble Build to create scalable PebbleKit JavaScript</a></h3>
+      <div class="meta-label">
+        posted on <span class="meta-value muted">09 November 2015</span>
+        
+          in <span class="meta-value"><a href="/programming">programming</a></span>
+        
+        with <span class="meta-value"><a data-disqus-identifier="using-grunt-with-pebble-build-to-create-scalable-pebblekit-javascript" href="#disqus_thread">0 Comments</a></span>
+      </div><!-- end .meta-label -->
+
+    </div>
+  </article>
 
   <article>
     <div class="container">
