--- a/programming/github-pages-jekyll-and-grunt/index.html
+++ b/programming/github-pages-jekyll-and-grunt/index.html
@@ -290,6 +290,9 @@ Configuration file: /Users/paul/Projects/demo/_config.yml
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/using-grunt-with-pebble-build/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/using-grunt-with-pebble-build/">Using Grunt with Pebble Build to create scalable PebbleKit JavaScript</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
