--- a/npptoolbucket/index.html
+++ b/npptoolbucket/index.html
@@ -116,7 +116,7 @@
 </ul>
 <h2>Download</h2>
 <p>
-  <a href="/assets/files/NppToolBucket-1.6.zip" alt="Download NppToolBucket v1.6">NppToolBucket-1.6.zip</a>
+  <a href="/assets/files/NppToolBucket-1.7.zip" alt="Download NppToolBucket v1.7">NppToolBucket-1.7.zip</a>
   (latest)
 </p>
 <h2>Source code</h2>
@@ -138,6 +138,13 @@
 <p><img src="/assets/img/pages/ToolBucket2.png" alt=""></p>
 <p><img src="/assets/img/pages/ToolBucket3.png" alt=""></p>
 <h2>Version history</h2>
+<h3>v1.7</h3>
+<p>
+  <a href="/assets/files/NppToolBucket-1.7.zip" alt="Download NppToolBucket v1.7">NppToolBucket-1.7.zip</a>
+</p>
+<ul>
+  <li>Persisting 'Search In' option, window size and window location for the Find and Replace dialog</li>
+</ul>
 <h3>v1.6</h3>
 <p>
   <a href="/assets/files/NppToolBucket-1.6.zip" alt="Download NppToolBucket v1.6">NppToolBucket-1.6.zip</a>
