--- a/general/index.html
+++ b/general/index.html
@@ -101,11 +101,26 @@
       <div class="container">
 
   <div class="meta-label-lg">
-    Showing 3 posts  filed in 
+    Showing 4 posts  filed in 
     <span class="meta-value">general</span>
   </div><!-- end .meta-label-lg -->
 
 </div>
+
+  <article>
+    <div class="container">
+
+      <h3><a href="/general/adding-font-awesome-icons-to-google-slides/" title="Read full article">Adding font-awesome (or any SVG) to Google Slides</a></h3>
+      <div class="meta-label">
+        posted on <span class="meta-value muted">12 May 2016</span>
+        
+          in <span class="meta-value"><a href="/general">general</a></span>
+        
+        with <span class="meta-value"><a data-disqus-identifier="adding-font-awesome-or-any-svg-to-google-slides" href="#disqus_thread">0 Comments</a></span>
+      </div><!-- end .meta-label -->
+
+    </div>
+  </article>
 
   <article>
     <div class="container">
