--- a/programming/using-grunt-with-pebble-build/index.html
+++ b/programming/using-grunt-with-pebble-build/index.html
@@ -523,6 +523,9 @@ Done, without errors.</code></pre></div>
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/general/adding-font-awesome-icons-to-google-slides/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/general/adding-font-awesome-icons-to-google-slides/">Adding font-awesome (or any SVG) to Google Slides</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
