--- a/about/index.html
+++ b/about/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<meta charset=utf-8>
-<title>Redirecting...</title>
-<link rel=canonical href="/index.html">
-<meta http-equiv=refresh content="0; url=/index.html">
-<h1>Redirecting...</h1>
-<a href="/index.html">Click here if you are not redirected.</a>
-<script>location='/index.html'</script>
+<html lang="en-US">
+<meta charset="utf-8">
+<title>Redirecting…</title>
+<link rel="canonical" href="http://phdesign.com.au/index.html">
+<meta http-equiv="refresh" content="0; url=http://phdesign.com.au/index.html">
+<h1>Redirecting…</h1>
+<a href="http://phdesign.com.au/index.html">Click here if you are not redirected.</a>
+<script>location="http://phdesign.com.au/index.html"</script>
+</html>
