--- a/programming/toolbucket-multi-line-search-plugin-for-notepad/index.html
+++ b/programming/toolbucket-multi-line-search-plugin-for-notepad/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<meta charset=utf-8>
-<title>Redirecting...</title>
-<link rel=canonical href="/npptoolbucket/">
-<meta http-equiv=refresh content="0; url=/npptoolbucket/">
-<h1>Redirecting...</h1>
-<a href="/npptoolbucket/">Click here if you are not redirected.</a>
-<script>location='/npptoolbucket/'</script>
+<html lang="en-US">
+<meta charset="utf-8">
+<title>Redirecting…</title>
+<link rel="canonical" href="http://phdesign.com.au/npptoolbucket/">
+<meta http-equiv="refresh" content="0; url=http://phdesign.com.au/npptoolbucket/">
+<h1>Redirecting…</h1>
+<a href="http://phdesign.com.au/npptoolbucket/">Click here if you are not redirected.</a>
+<script>location="http://phdesign.com.au/npptoolbucket/"</script>
+</html>
