--- a/programming/index.html
+++ b/programming/index.html
@@ -101,11 +101,26 @@
       <div class="container">
 
   <div class="meta-label-lg">
-    Showing 19 posts  filed in 
+    Showing 20 posts  filed in 
     <span class="meta-value">programming</span>
   </div><!-- end .meta-label-lg -->
 
 </div>
+
+  <article>
+    <div class="container">
+
+      <h3><a href="/programming/starting-a-promise-chain-to-handle-exceptions-correctly/" title="Read full article">Starting a promise chain to handle exceptions correctly</a></h3>
+      <div class="meta-label">
+        posted on <span class="meta-value muted">04 January 2017</span>
+        
+          in <span class="meta-value"><a href="/programming">programming</a></span>
+        
+        with <span class="meta-value"><a data-disqus-identifier="starting-a-promise-chain-to-handle-exceptions-correctly" href="#disqus_thread">0 Comments</a></span>
+      </div><!-- end .meta-label -->
+
+    </div>
+  </article>
 
   <article>
     <div class="container">
