--- a/programming/auto-increment-project-version-from-travis/index.html
+++ b/programming/auto-increment-project-version-from-travis/index.html
@@ -259,6 +259,9 @@
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/starting-a-promise-chain-to-handle-exceptions-correctly/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/starting-a-promise-chain-to-handle-exceptions-correctly/">Starting a promise chain to handle exceptions correctly</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
