--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
             <li><a href="/betternote">BetterNote</a></li>
           </ul>
         </li>
+        <li><a href="/presentations">Presentations</a></li>
         <li><a href="/contact">Contact me</a></li>
       </ul>
 
