--- a/programming/github-pages-jekyll-and-grunt/index.html
+++ b/programming/github-pages-jekyll-and-grunt/index.html
@@ -121,7 +121,7 @@
     
 
     <div class="alert alert-info" role="alert">
-  This post is adapted from a presentation I gave at <a class="alert-link" href="http://www.webdirections.org/events/what-do-you-know-melbourne-september-2015/">What Do You Know Melbourne</a> on 3 September 2015
+  This post is adapted from a presentation I gave at <a class="alert-link" href="http://www.webdirections.org/events/what-do-you-know-melbourne-september-2015/" target="_blank">What Do You Know Melbourne</a> on 3 September 2015
 </div>
 
 <p>For years I’ve used Wordpress to host my site, which has been great but it’s overkill for what I need. I’d be happier to write the HTML myself if it wasn’t such a maintenance pain keeping consistency across all the pages. I hated having to update WordPress continually to ensure my site is secure. In order to keep all my site source in Git I have to synchronise the changes that happen automatically on the server, like updates and uploads / media files back to my working copy to commit them. And it doesn’t enable me to keep any of my content in Git, which is most important, I have to take regular database backups for this.</p>
