--- a/programming/index.html
+++ b/programming/index.html
@@ -97,11 +97,26 @@
   	  <div class="container">
 
   <div class="meta-label-lg">
-    Showing 20 posts  filed in 
+    Showing 21 posts  filed in 
     <span class="meta-value">programming</span>
   </div><!-- end .meta-label-lg -->
 
 </div>
+
+  <article>
+    <div class="container">
+
+      <h3><a href="/programming/mob-programming/" title="Read full article">Two's company, three's a mob: Mob programming</a></h3>
+      <div class="meta-label">
+        posted on <span class="meta-value muted">26 April 2017</span>
+        
+          in <span class="meta-value"><a href="/programming">programming</a></span>
+        
+        with <span class="meta-value"><a data-disqus-identifier="Two's company, three's a mob: Mob programming" href="#disqus_thread">0 Comments</a></span>
+      </div><!-- end .meta-label -->
+
+    </div>
+  </article>
 
   <article>
     <div class="container">
