--- a/programming/starting-a-promise-chain-to-handle-exceptions-correctly/index.html
+++ b/programming/starting-a-promise-chain-to-handle-exceptions-correctly/index.html
@@ -220,6 +220,9 @@
       </div>
       <div class="next col-xs-6 col-sm-4 col-sm-offset-4">
         
+          <div class="meta-label"><a href="/programming/mob-programming/">Next post <span aria-hidden="true">&raquo;</span></a></div>
+          <div class="meta-value"><a href="/programming/mob-programming/">Two's company, three's a mob: Mob programming</a></div>
+        
       </div>
     </nav><!-- end .post_nav -->
 
