--- a/general/adding-font-awesome-icons-to-google-slides/index.html
+++ b/general/adding-font-awesome-icons-to-google-slides/index.html
@@ -187,7 +187,7 @@ Unfortunately you can’t import an SVG directly but you can import a similar fo
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Adding font-awesome (or any SVG) to Google Slides';
+        var disqus_identifier = 'http://phdesign.com.au/general/adding-font-awesome-icons-to-google-slides/';
         var disqus_title = 'Adding font-awesome (or any SVG) to Google Slides';
         var disqus_url = 'http://phdesign.com.au/general/adding-font-awesome-icons-to-google-slides/';
 
