--- a/general/converting-topfield-pvr-recordings/index.html
+++ b/general/converting-topfield-pvr-recordings/index.html
@@ -188,7 +188,7 @@ Transferring about 8 recorded shows and 4 movies took under 30 mins, this takes 
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Converting Topfield PVR Recordings';
+        var disqus_identifier = 'http://phdesign.com.au/general/converting-topfield-pvr-recordings/';
         var disqus_title = 'Converting Topfield PVR Recordings';
         var disqus_url = 'http://phdesign.com.au/general/converting-topfield-pvr-recordings/';
 
