--- a/general/excel-templates-for-scrum-product-and-sprint-backlogs/index.html
+++ b/general/excel-templates-for-scrum-product-and-sprint-backlogs/index.html
@@ -183,7 +183,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Excel templates for Scrum Product and Sprint Backlogs';
+        var disqus_identifier = 'http://phdesign.com.au/general/excel-templates-for-scrum-product-and-sprint-backlogs/';
         var disqus_title = 'Excel templates for Scrum Product and Sprint Backlogs';
         var disqus_url = 'http://phdesign.com.au/general/excel-templates-for-scrum-product-and-sprint-backlogs/';
 
