--- a/general/phreplace-goes-open-source/index.html
+++ b/general/phreplace-goes-open-source/index.html
@@ -176,7 +176,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'phreplace Goes Open Source';
+        var disqus_identifier = 'http://phdesign.com.au/general/phreplace-goes-open-source/';
         var disqus_title = 'phreplace Goes Open Source';
         var disqus_url = 'http://phdesign.com.au/general/phreplace-goes-open-source/';
 
