--- a/programming/auto-increment-project-version-from-travis/index.html
+++ b/programming/auto-increment-project-version-from-travis/index.html
@@ -235,7 +235,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Increment project version from Travis';
+        var disqus_identifier = 'http://phdesign.com.au/programming/auto-increment-project-version-from-travis/';
         var disqus_title = 'Increment project version from Travis';
         var disqus_url = 'http://phdesign.com.au/programming/auto-increment-project-version-from-travis/';
 
