--- a/programming/backbone-spark/index.html
+++ b/programming/backbone-spark/index.html
@@ -241,7 +241,7 @@ You can identify a getter call by testing arguments.length === 0, a setter call 
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Backbone.Spark: Ember style computed properties for Backbone.js';
+        var disqus_identifier = 'http://phdesign.com.au/programming/backbone-spark/';
         var disqus_title = 'Backbone.Spark: Ember style computed properties for Backbone.js';
         var disqus_url = 'http://phdesign.com.au/programming/backbone-spark/';
 
