--- a/programming/catching-javascript-errors-with-promises/index.html
+++ b/programming/catching-javascript-errors-with-promises/index.html
@@ -178,7 +178,7 @@ Whereas:</p>
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Catching JavaScript errors with Promises';
+        var disqus_identifier = 'http://phdesign.com.au/programming/catching-javascript-errors-with-promises/';
         var disqus_title = 'Catching JavaScript errors with Promises';
         var disqus_url = 'http://phdesign.com.au/programming/catching-javascript-errors-with-promises/';
 
