--- a/programming/conditional-validation-in-asp-net-mvc3/index.html
+++ b/programming/conditional-validation-in-asp-net-mvc3/index.html
@@ -420,7 +420,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Conditional Validation in ASP.NET MVC3';
+        var disqus_identifier = 'http://phdesign.com.au/programming/conditional-validation-in-asp-net-mvc3/';
         var disqus_title = 'Conditional Validation in ASP.NET MVC3';
         var disqus_url = 'http://phdesign.com.au/programming/conditional-validation-in-asp-net-mvc3/';
 
