--- a/programming/create-a-pdf-using-the-net-reportviewer-control/index.html
+++ b/programming/create-a-pdf-using-the-net-reportviewer-control/index.html
@@ -304,7 +304,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Create a PDF using the .Net ReportViewer control';
+        var disqus_identifier = 'http://phdesign.com.au/programming/create-a-pdf-using-the-net-reportviewer-control/';
         var disqus_title = 'Create a PDF using the .Net ReportViewer control';
         var disqus_url = 'http://phdesign.com.au/programming/create-a-pdf-using-the-net-reportviewer-control/';
 
