--- a/programming/create-branch-of-modified-working-copy-in-tfs/index.html
+++ b/programming/create-branch-of-modified-working-copy-in-tfs/index.html
@@ -176,7 +176,7 @@ To do this you need TFS Power Tools ‘unshelve’. More info here:<br />
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Create branch of modified working copy in TFS';
+        var disqus_identifier = 'http://phdesign.com.au/programming/create-branch-of-modified-working-copy-in-tfs/';
         var disqus_title = 'Create branch of modified working copy in TFS';
         var disqus_url = 'http://phdesign.com.au/programming/create-branch-of-modified-working-copy-in-tfs/';
 
