--- a/programming/github-pages-jekyll-and-grunt/index.html
+++ b/programming/github-pages-jekyll-and-grunt/index.html
@@ -260,7 +260,7 @@ Configuration file: /Users/paul/Projects/demo/_config.yml
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Replace your CMS with GitHub Pages, Jekyll and Grunt';
+        var disqus_identifier = 'http://phdesign.com.au/programming/github-pages-jekyll-and-grunt/';
         var disqus_title = 'Replace your CMS with GitHub Pages, Jekyll and Grunt';
         var disqus_url = 'http://phdesign.com.au/programming/github-pages-jekyll-and-grunt/';
 
