--- a/programming/ie-autocomplete-doesnt-fire-onchange-event-handler/index.html
+++ b/programming/ie-autocomplete-doesnt-fire-onchange-event-handler/index.html
@@ -209,7 +209,7 @@ calling onchange.
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'IE Autocomplete Doesn't Fire onchange Event Handler';
+        var disqus_identifier = 'http://phdesign.com.au/programming/ie-autocomplete-doesnt-fire-onchange-event-handler/';
         var disqus_title = 'IE Autocomplete Doesn't Fire onchange Event Handler';
         var disqus_url = 'http://phdesign.com.au/programming/ie-autocomplete-doesnt-fire-onchange-event-handler/';
 
