--- a/programming/logging-messages-in-dot-net/index.html
+++ b/programming/logging-messages-in-dot-net/index.html
@@ -226,7 +226,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Logging Messages in Dot Net';
+        var disqus_identifier = 'http://phdesign.com.au/programming/logging-messages-in-dot-net/';
         var disqus_title = 'Logging Messages in Dot Net';
         var disqus_url = 'http://phdesign.com.au/programming/logging-messages-in-dot-net/';
 
