--- a/programming/logging-objects-to-the-console-in-internet-explorer/index.html
+++ b/programming/logging-objects-to-the-console-in-internet-explorer/index.html
@@ -192,7 +192,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Logging Objects to the Console in Internet Explorer';
+        var disqus_identifier = 'http://phdesign.com.au/programming/logging-objects-to-the-console-in-internet-explorer/';
         var disqus_title = 'Logging Objects to the Console in Internet Explorer';
         var disqus_url = 'http://phdesign.com.au/programming/logging-objects-to-the-console-in-internet-explorer/';
 
