--- a/programming/mapping-errors-in-jquery-promises-deferred/index.html
+++ b/programming/mapping-errors-in-jquery-promises-deferred/index.html
@@ -294,7 +294,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Mapping errors in jQuery promises / deferred';
+        var disqus_identifier = 'http://phdesign.com.au/programming/mapping-errors-in-jquery-promises-deferred/';
         var disqus_title = 'Mapping errors in jQuery promises / deferred';
         var disqus_url = 'http://phdesign.com.au/programming/mapping-errors-in-jquery-promises-deferred/';
 
