--- a/programming/mob-programming/index.html
+++ b/programming/mob-programming/index.html
@@ -209,7 +209,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Two's company, three's a mob: Mob programming';
+        var disqus_identifier = 'http://phdesign.com.au/programming/mob-programming/';
         var disqus_title = 'Two's company, three's a mob: Mob programming';
         var disqus_url = 'http://phdesign.com.au/programming/mob-programming/';
 
