--- a/programming/registering-phreplace-dll-in-windows-vista/index.html
+++ b/programming/registering-phreplace-dll-in-windows-vista/index.html
@@ -176,7 +176,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Registering phreplace DLL in Windows Vista';
+        var disqus_identifier = 'http://phdesign.com.au/programming/registering-phreplace-dll-in-windows-vista/';
         var disqus_title = 'Registering phreplace DLL in Windows Vista';
         var disqus_url = 'http://phdesign.com.au/programming/registering-phreplace-dll-in-windows-vista/';
 
