--- a/programming/starting-a-promise-chain-to-handle-exceptions-correctly/index.html
+++ b/programming/starting-a-promise-chain-to-handle-exceptions-correctly/index.html
@@ -187,7 +187,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Starting a promise chain to handle exceptions correctly';
+        var disqus_identifier = 'http://phdesign.com.au/programming/starting-a-promise-chain-to-handle-exceptions-correctly/';
         var disqus_title = 'Starting a promise chain to handle exceptions correctly';
         var disqus_url = 'http://phdesign.com.au/programming/starting-a-promise-chain-to-handle-exceptions-correctly/';
 
