--- a/programming/tfs-undo-checkout-of-unedited-files/index.html
+++ b/programming/tfs-undo-checkout-of-unedited-files/index.html
@@ -162,7 +162,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'TFS undo checkout of unedited files';
+        var disqus_identifier = 'http://phdesign.com.au/programming/tfs-undo-checkout-of-unedited-files/';
         var disqus_title = 'TFS undo checkout of unedited files';
         var disqus_url = 'http://phdesign.com.au/programming/tfs-undo-checkout-of-unedited-files/';
 
