--- a/programming/unindent-in-expression-blend/index.html
+++ b/programming/unindent-in-expression-blend/index.html
@@ -165,7 +165,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Unindent in Expression Blend';
+        var disqus_identifier = 'http://phdesign.com.au/programming/unindent-in-expression-blend/';
         var disqus_title = 'Unindent in Expression Blend';
         var disqus_url = 'http://phdesign.com.au/programming/unindent-in-expression-blend/';
 
