--- a/programming/using-grunt-with-pebble-build/index.html
+++ b/programming/using-grunt-with-pebble-build/index.html
@@ -493,7 +493,7 @@ Done, without errors.</code></pre></figure>
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Using Grunt with Pebble Build to create scalable PebbleKit JavaScript';
+        var disqus_identifier = 'http://phdesign.com.au/programming/using-grunt-with-pebble-build/';
         var disqus_title = 'Using Grunt with Pebble Build to create scalable PebbleKit JavaScript';
         var disqus_url = 'http://phdesign.com.au/programming/using-grunt-with-pebble-build/';
 
