--- a/programming/using-linq-to-list-all-duplicates/index.html
+++ b/programming/using-linq-to-list-all-duplicates/index.html
@@ -193,7 +193,7 @@ Note that I also stuck in a check for blank emails, I don’t consider a Submiss
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Using LINQ to list all duplicates';
+        var disqus_identifier = 'http://phdesign.com.au/programming/using-linq-to-list-all-duplicates/';
         var disqus_title = 'Using LINQ to list all duplicates';
         var disqus_url = 'http://phdesign.com.au/programming/using-linq-to-list-all-duplicates/';
 
