--- a/programming/wpf-radiobutton-binding-to-ischecked-property/index.html
+++ b/programming/wpf-radiobutton-binding-to-ischecked-property/index.html
@@ -211,7 +211,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'WPF RadioButton Binding to IsChecked Property';
+        var disqus_identifier = 'http://phdesign.com.au/programming/wpf-radiobutton-binding-to-ischecked-property/';
         var disqus_title = 'WPF RadioButton Binding to IsChecked Property';
         var disqus_url = 'http://phdesign.com.au/programming/wpf-radiobutton-binding-to-ischecked-property/';
 
