--- a/woodworking/pallet-wood-coffee-table/index.html
+++ b/woodworking/pallet-wood-coffee-table/index.html
@@ -289,7 +289,7 @@
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Pallet Wood Coffee Table';
+        var disqus_identifier = 'http://phdesign.com.au/woodworking/pallet-wood-coffee-table/';
         var disqus_title = 'Pallet Wood Coffee Table';
         var disqus_url = 'http://phdesign.com.au/woodworking/pallet-wood-coffee-table/';
 
