--- a/programming/delete-dependent-entities-when-removed-from-ef-collection/index.html
+++ b/programming/delete-dependent-entities-when-removed-from-ef-collection/index.html
@@ -187,7 +187,7 @@ I have an Entity Framework model being used in the business layer called Patient
       <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
-        var disqus_identifier = 'Delete Dependents When Removing an Entity From Entity Framework';
+        var disqus_identifier = 'http://phdesign.com.au/programming/delete-dependent-entities-when-removed-from-ef-collection/';
         var disqus_title = 'Delete Dependents When Removing an Entity From Entity Framework';
         var disqus_url = 'http://phdesign.com.au/programming/delete-dependent-entities-when-removed-from-ef-collection/';
 
