--- a/programming/mob-programming/index.html
+++ b/programming/mob-programming/index.html
@@ -210,7 +210,7 @@
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
         var disqus_identifier = 'http://phdesign.com.au/programming/mob-programming/';
-        var disqus_title = 'Two's company, three's a mob: Mob programming';
+        var disqus_title = 'Two&#39;s company, three&#39;s a mob: Mob programming';
         var disqus_url = 'http://phdesign.com.au/programming/mob-programming/';
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
