--- a/programming/no-validation-messages-when-disabling-enabling-asp-net-validator-in-javascript/index.html
+++ b/programming/no-validation-messages-when-disabling-enabling-asp-net-validator-in-javascript/index.html
@@ -202,7 +202,7 @@ If Page_IsValid is false then assume the user has tried to submit but failed, in
         /* * * CONFIGURATION VARIABLES * * */
         var disqus_shortname = 'phdesign';
         var disqus_identifier = 'http://phdesign.com.au/programming/no-validation-messages-when-disabling-enabling-asp-net-validator-in-javascript/';
-        var disqus_title = 'No Validation Messages when Disabling & Enabling ASP.Net Validator in Javascript';
+        var disqus_title = 'No Validation Messages when Disabling &amp; Enabling ASP.Net Validator in Javascript';
         var disqus_url = 'http://phdesign.com.au/programming/no-validation-messages-when-disabling-enabling-asp-net-validator-in-javascript/';
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
