--- a/npptoolbucket/index.html
+++ b/npptoolbucket/index.html
@@ -124,8 +124,8 @@
 </ul>
 <h2>Download</h2>
 <p>
-  <a href="/assets/files/NppToolBucket-1.7.zip" alt="Download NppToolBucket v1.7">NppToolBucket-1.7.zip</a>
-  (latest)
+  <a href="/assets/files/NppToolBucket-1.8.zip" alt="Download NppToolBucket v1.8 (32-bit verison)">NppToolBucket-1.8.zip</a> (32-bit version)<br/>
+  <a href="/assets/files/NppToolBucket-1.8-x64.zip" alt="Download NppToolBucket v1.8 (64-bit verison)">NppToolBucket-1.8-x64.zip</a> (64-bit version)
 </p>
 <h2>Source code</h2>
 <p>
@@ -139,13 +139,21 @@
 </p>
 <h2>Dependencies</h2>
 <p>
-  Requires .NET Framework 2.0 or higher to be installed on the system.
+  Requires .NET Framework 3.5 or higher to be installed on the system.
 </p>
 <h2>Screenshots</h2>
 <p><img src="/assets/img/pages/ToolBucket1.png" alt=""></p>
 <p><img src="/assets/img/pages/ToolBucket2.png" alt=""></p>
 <p><img src="/assets/img/pages/ToolBucket3.png" alt=""></p>
 <h2>Version history</h2>
+<h3>v1.8</h3>
+<p>
+  <a href="/assets/files/NppToolBucket-1.8.zip" alt="Download NppToolBucket v1.8 (32-bit verison)">NppToolBucket-1.8.zip</a><br/>
+  <a href="/assets/files/NppToolBucket-1.8-x64.zip" alt="Download NppToolBucket v1.8 (64-bit verison)">NppToolBucket-1.8-x64.zip</a>
+</p>
+<ul>
+  <li>Update project template to support creation of x64 version</li>
+</ul>
 <h3>v1.7</h3>
 <p>
   <a href="/assets/files/NppToolBucket-1.7.zip" alt="Download NppToolBucket v1.7">NppToolBucket-1.7.zip</a>
