--- a/flickr-rsync/index.html
+++ b/flickr-rsync/index.html
@@ -85,9 +85,10 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Projects <span class="caret"></span></a>
           <ul class="dropdown-menu" role="menu">
-            <li><a href="/phreplace">phReplace</a></li>
+            <li><a href="/flickr-rsync">flickr-rsync</a></li>
             <li><a href="/npptoolbucket">NppToolBucket</a></li>
             <li><a href="/betternote">BetterNote</a></li>
+            <li><a href="/phreplace">phReplace</a></li>
           </ul>
         </li>
         <li><a href="/presentations">Presentations</a></li>
@@ -112,55 +113,28 @@
 
       <h1 id="flickr-rsync">flickr-rsync</h1>
 
-<p>phreplace is a multi-line search and replace add on for PSPad. It allows multiple lines for search and replace terms, as well as supporting other standard search features such as:</p>
+<blockquote>
+  <p>Its like rsync for Flickr!</p>
+</blockquote>
 
-<ul>
-  <li>One</li>
-  <li>Two</li>
-</ul>
+<p>A python script to manage synchronising a local directory of photos with Flickr based on an rsync interaction pattern.</p>
 
-<section>
-  <ul class="alt">
-    <li>Search, replace or replace all functions</li>
-    <li>
-      Search only within selected text, the active document or all open documents.
-    </li>
-    <li>Search for whole words only</li>
-    <li>Search as case sensitive or ignore case</li>
-    <li>Seach using regular expressions</li>
-    <li>Search / replace history</li>
-  </ul>
-  <h2>Download</h2>
-  <p>
-    Latest release:
-    <a title="Download phreplace 2.0.24" href="/assets/files/phreplace-2.0.24.zip">phreplace 2.0.24</a>
-    <br />
-    <span class="greyDate">Released 19 December 2009</span>
-  </p>
-  <h2>License</h2>
-  <p>
-    phreplace is distributed under the
-    <a href="http://www.gnu.org/licenses/" title="GNU Lesser Public License">GNU LGPL license</a>
-    .
-  </p>
-  <p>phreplace is free for personal or commercial use.</p>
-  <h2>Contribute</h2>
-  <p>
-    phreplace is open source software, the source code is available at
-    <a title="phreplace source code available at Assembla" href="https://www.assembla.com/spaces/phreplace/documents">Assembla</a>
-    for you to download and use as you like.
-  </p>
-  <p>
-    If you improve the code please email me to have your changes incorporated into the project.
-  </p>
-  <h2>Documentation</h2>
-  <p>
-    Documentation is included as a help file in the phreplace download, or is <a href="docs/#introduction" title="View the documentation">available online</a>.
-  </p>
-  <p>
-    See the <a href="docs/#installation" title="How to install phreplace">Installation page</a> for information about installing phreplace.
-  </p>
-</section>
+<h2 id="sync-files">Sync files</h2>
+<p>Synchronise a local folder of media files to flickr or from flickr to a local folder, supports filters for including or
+excluding folders and files based on a regular expression pattern. <strong>No surprises</strong> flickr-rsync will never delete or 
+modify files in the destination, it will only add new files or skip existing ones.</p>
+
+<h2 id="list-files">List files</h2>
+<p>List photos from the local file system or from flickr in diff-friendly formats.</p>
+
+<h2 id="github-repo">GitHub repo</h2>
+<p><a href="https://github.com/phdesign/flickr-rsync">https://github.com/phdesign/flickr-rsync</a></p>
+
+<h2 id="license">License</h2>
+<p>flickr-rsync is distributed under the very permissive <a href="https://opensource.org/licenses/MIT">MIT License</a>, use and modify it for personal or commercial use.</p>
+
+<h2 id="documentation">Documentation</h2>
+<p>Checkout the <a href="docs">documentation here</a>.</p>
 
 
     </div><!-- end .col-sm-8 -->
@@ -174,25 +148,13 @@
 
     <nav>
       <ul class="alt">
-        <li><a href="/phreplace/docs/#introduction">Introduction</a></li>
-        <li><a href="/phreplace/docs/#installation">Installation</a></li>
-        <li>
-          <a href="/phreplace/docs/#using-phreplace">Using phreplace</a>
-          <ul>
-            <li><a href="/phreplace/docs/#search-options">Search options</a></li>
-            <li><a href="/phreplace/docs/#regular-expressions">Regular expressions</a></li>
-            <li><a href="/phreplace/docs/#search-history">Search history</a></li>
-            <li><a href="/phreplace/docs/#settings">Settings</a></li>
-          </ul>
-        </li>
-        <li>
-          <a href="/phreplace/docs/#support-and-development">Support and development</a>
-          <ul>
-            <li><a href="/phreplace/docs/#version-history">Version history</a></li>
-            <li><a href="/phreplace/docs/#troubleshooting">Troubleshooting</a></li>
-            <li><a href="/phreplace/docs/#known-bugs">Known bugs</a></li>
-          </ul>
-        </li>
+        <li><a href="/flickr-rsync/docs/#introduction">Introduction</a></li>
+        <li><a href="/flickr-rsync/docs/#installation">Installation</a></li>
+        <li><a href="/flickr-rsync/docs/#authenticating-with-flickr">Authenticating with Flickr</a></li>
+        <li><a href="/flickr-rsync/docs/#listing-files">Listing Files</a></li>
+        <li><a href="/flickr-rsync/docs/#syncing-files">Syncing Files</a></li>
+        <li><a href="/flickr-rsync/docs/#filtering">Filtering</a></li>
+        <li><a href="/flickr-rsync/docs/#options">Options</a></li>
       </ul>
     </nav>
 
