--- a/programming/index.html
+++ b/programming/index.html
@@ -110,11 +110,26 @@
   	  <div class="container">
 
   <div class="meta-label-lg">
-    Showing 23 posts  filed in 
+    Showing 24 posts  filed in 
     <span class="meta-value">programming</span>
   </div><!-- end .meta-label-lg -->
 
 </div>
+
+  <article>
+    <div class="container">
+
+      <h3><a href="/programming/advanced-redux-in-xamarin-part2-persistent-actions-middleware/" title="Read full article">Advanced Redux in Xamarin Part 2: Persistent Actions Middleware</a></h3>
+      <div class="meta-label">
+        posted on <span class="meta-value muted">20 July 2017</span>
+        
+          in <span class="meta-value"><a href="/programming">programming</a></span>
+        
+        with <span class="meta-value"><a data-disqus-identifier="Advanced Redux in Xamarin Part 2: Persistent Actions Middleware" href="#disqus_thread">0 Comments</a></span>
+      </div><!-- end .meta-label -->
+
+    </div>
+  </article>
 
   <article>
     <div class="container">
