--- a/programming/advanced-redux-in-xamarin-part3-database-middleware/index.html
+++ b/programming/advanced-redux-in-xamarin-part3-database-middleware/index.html
@@ -137,7 +137,7 @@
 
 <!--more-->
 
-<p>In the <a href="2017-07-20-advanced-redux-in-xamarin-part2-persistent-actions-middleware.md">previous post in this series</a> we covered what Middleware is in Redux and we wrote Middleware to store all Actions as they are dispatched, then reloaded those actions on app startup. This approach can be useful where storage costs are cheap, but for a Xamarin app this every growing list of Actions is going to consume unnecessary device storage.</p>
+<p>In the <a href="../advanced-redux-in-xamarin-part2-persistent-actions-middleware">previous post in this series</a> we covered what Middleware is in Redux and we wrote Middleware to store all Actions as they are dispatched, then reloaded those actions on app startup. This approach can be useful where storage costs are cheap, but for a Xamarin app this every growing list of Actions is going to consume unnecessary device storage.</p>
 
 <h4 id="saving-new-items">Saving new items</h4>
 
